--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
-		안녕 소윤 승윤아
+		<p>안녕 소윤 승윤아</p>	
+		<p>엄마 아빠 멋지고 사랑해  </p>
+		<p>엄마 아빠 사랑해  </p>
 	</body>
 </html>
