--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
 		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fcafefiles.naver.net%2F20140703_245%2Fsiena94_1404363462826iOX7R_PNG%2Fpika.png&type=a340"/>
 		
 		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA2MjdfMTY0%2FMDAxNTYxNjQzOTIxODUy.ZthEmYZ8Ad8wM31JU4RjL5srlzF7IB2BOIwyGs828Ocg.Vm6Adt3ku6UqNgByTQEwoMAE8Ox0zDWmo9uCP_mqOZIg.PNG.opgh1%2F%25B8%25ED%25C5%25BD%25C1%25A4%25C7%25C7%25C4%25AB%25C3%25F2.png&type=a340"/>
+		
+		<p>이건 승윤이꺼야</p>
+		<img src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F7c%2Fac%2F9f%2F7cac9ffb98ca75f8f9697ce1b54a6300.jpg&type=a340"/>
+		
+		<p>이건 소윤이꺼야</p>
+		
+		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAxMDlfMTg1%2FMDAxNjEwMTc1NjU5MDgx.89_bj-cN2P7uSQDepmMIviZAL0I4SmzZZmej0gxN8PAg.mOrlC0eLc3KC8dR4UhuGRruaioLgtzdEzS7B2i8glVAg.JPEG.ev91%2F%25C1%25F6%25BF%25EC%25C7%25C7%25C4%25AB%25C3%25F2.jpeg&type=a340"/>
+		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAzMThfMTI2%2FMDAxNjE2MDQzNzYzMTM2.iAMUiMdY6BzRehwiKpEcFNXwdS101Hev2VPM2lH58Z8g.aBYbDY8ayjkfvfZLXayuXAySowe53Y0RAbh1MPM4trkg.JPEG.lhl6291%2FIMG_7321.JPG&type=a340"/>
+		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200323_209%2F1584898413001UylWh_JPEG%2F22258247546824706_766269936.jpg&type=a340"/>
 	</body>
+	<script>
+		setTimeout(test, 3000);
+		function test() 
+		{
+			var a = document.getElementById('id1').style.display;
+			if(a == 'block') a = 'none'
+			else a = 'block'
+		  	document.getElementById('id1').style.display = a;
+		}
+	</script>
 </html>
