--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 			var a = document.getElementById('id1').style.display;
 			if(a == 'block') a = 'none'
 			else a = 'block'
+			
+			alert(a);
 		  	document.getElementById('id1').style.display = a;
 		}
 	</script>
