--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 		function test() 
 		{
 			var a = document.getElementById('id1').style.display;
-			if(a == 'block') a = 'none'
-			else a = 'block'
+			//if(a == 'block') a = 'none'
+			//else a = 'block'
 			
 			alert(a);
-		  	document.getElementById('id1').style.display = a;
+		  	//document.getElementById('id1').style.display = a;
 		}
 	</script>
 </html>
