--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			if(a == 'block') a = 'none'
 			else a = 'block'
 			
-			alert(a);
+			//alert(a);
 		  	document.getElementById('id1').style.display = a;
 		}
 	</script>
