--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
+	<style>
+		#body{
+			margin : 0 auto;
+		}
+	</style>
+	<body id='body'>
 		<p>안녕 소윤 승윤아</p>	
 		<p>엄마 아빠 멋지고 사랑해  </p>
 		<p>엄마 아빠 사랑해  </p>
@@ -39,16 +44,17 @@
 		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAzMThfMTI2%2FMDAxNjE2MDQzNzYzMTM2.iAMUiMdY6BzRehwiKpEcFNXwdS101Hev2VPM2lH58Z8g.aBYbDY8ayjkfvfZLXayuXAySowe53Y0RAbh1MPM4trkg.JPEG.lhl6291%2FIMG_7321.JPG&type=a340"/>
 		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200323_209%2F1584898413001UylWh_JPEG%2F22258247546824706_766269936.jpg&type=a340"/>
 	</body>
+	<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script>
-		setInterval(test, 3000);
-		function test() 
+		setInterval(test('id1'), 1000);
+		function test(id) 
 		{
-			var a = document.getElementById('id1').style.display;
-			if(a == 'block') a = 'none'
-			else a = 'block'
+			$('#'+id).toggle();
+			// var a = document.getElementById('id1').style.display;
+			// if(a == 'block') a = 'none'
+			// else a = 'block'
 			
-			//alert(a);
-		  	document.getElementById('id1').style.display = a;
+			// document.getElementById('id1').style.display = a;
 		}
 	</script>
 </html>
