--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<style>
-		#body{
-			margin : 0 auto;
-		}
+		p { border:1px solid blue; } 
 	</style>
-	<body id='body'>
+	<body>
 		<p>안녕 소윤 승윤아</p>	
 		<p>엄마 아빠 멋지고 사랑해  </p>
 		<p>엄마 아빠 사랑해  </p>
