--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<style>
-		p { border:1px solid blue; } 
+		p { margin:0 auto; } 
 	</style>
 	<body>
 		<p>안녕 소윤 승윤아</p>	
