--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			if($("#" + id).css("display") == "none"){
 				$("#" + id).show();
 			}else{
-				$("#" + id.hide();
+				$("#" + id).hide();
 			}
 		}
 		
