--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		img {margin-bottom : 10px;}
 	</style>
 	<body>
+		<button onclick='toggle_layer()'>
+			눌러바
+		</button>
 		<p>안녕 소윤 승윤아</p>	
 		<p>엄마 아빠 멋지고 사랑해  </p>
 		<p>엄마 아빠 사랑해  </p>
@@ -45,7 +48,7 @@
 	</body>
 	<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script>
-		setInterval(toggle_layer, 1000);
+		// setInterval(toggle_layer, 1000);
 		
 		function toggle_layer() 
 		{
