--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAzMThfMTI2%2FMDAxNjE2MDQzNzYzMTM2.iAMUiMdY6BzRehwiKpEcFNXwdS101Hev2VPM2lH58Z8g.aBYbDY8ayjkfvfZLXayuXAySowe53Y0RAbh1MPM4trkg.JPEG.lhl6291%2FIMG_7321.JPG&type=a340"/>
 		<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200323_209%2F1584898413001UylWh_JPEG%2F22258247546824706_766269936.jpg&type=a340"/>
 	</body>
-	<script  src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script  src="js/jquery_min.js"></script>
 	<script>
 		// setInterval(toggle_layer, 1000);
 		
