--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
 		
 		function toggle_layer() 
 		{
-			var tmp = $("#id1").style.display;
-			if(tmp == '' || tmp == 'block')
-				$("#id1").style = 'none';
-			else
-				$("#id1").style = 'block'
+			$("#id1").toggle();
 		}
 		
 	</script>
