--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<style>
 		p { margin:30px; } 
 		img {margin-bottom : 10px;}
+		button{float: right; margin-right : 10px;}
 	</style>
 	<body>
 		<button onclick='toggle_layer()'>
