img 클릭 이벤트 추가(숨기기)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,16 @@
 	</body>
 	<script  src="js/jquery_min.js"></script>
 	<script>
-		// setInterval(toggle_layer, 1000);
+		$("img").on({
+
+			click: function () { //마우스 클릭 p 태그 안에서 일어날 때,
+				alert("click 이벤트가 발생했습니다.");
+				$("img").hide();
+			}
+		});
+
+
+		
 		
 		function toggle_layer() 
 		{
