--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		button{float: right; margin-right : 10px; width :100px}
 	</style>
 	<body>
-		<button onclick='toggle_layer()'>
+		<button onclick='showAllImage()'>
 			눌러바
 		</button>
 		<p>안녕 소윤 승윤아</p>	
@@ -77,18 +77,15 @@
 	<script>
 		$("img").on({
 
-			click: function () { //마우스 클릭 p 태그 안에서 일어날 때,
-				alert("click 이벤트가 발생했습니다.");
-				$("img").hide();
+			click: function () {
+				$(this).hide();
 			}
 		});
-
-
 		
 		
-		function toggle_layer() 
+		function showAllImage() 
 		{
-			$("#id1").toggle();
+			$("img").show();
 		}
 		
 	</script>
