--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
 			<button class="btn btn-success" onclick='hideAllImage()'> 모두숨겨줘 </button>
 		</div>
 		
+		<div class="card" style="width: 18rem;">
+		  <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAzMTlfOTUg%2FMDAxNjE2MTA5MDYzNjky.50uetrdZ3V4aX0Lw7TsTShBr60jpfE5oqmRDe-I2ELsg.uOmsW4-e2EorHUGbUtPqoAqacdIPAuo25RJ5C0y5NnUg.JPEG.harimart%2F20210318%25A3%25DF161325.jpg&type=sc960_832" class="card-img-top">
+		  <div class="card-body">
+			<h5 class="card-title">소윤이의 꽃</h5>
+			<p class="card-text">소윤이가 예쁘게 꽃을 만들었답니다. 지금은 우리집에 TV 위에 있어요.</p>
+		  </div>
+		</div>
+		
 		<div class="container">
 			<div class="accordion accordion-flush" id="accordionFlushExample">
 			  <div class="accordion-item">
 				<h2 class="accordion-header" id="flush-headingOne">
 				  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-					눌러봐 보렴
+					소윤이 눌러봐
 				  </button>
 				</h2>
 				<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -32,7 +40,7 @@
 			  <div class="accordion-item">
 				<h2 class="accordion-header" id="flush-headingTwo">
 				  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-					눌러봐 보렴
+					승윤아 눌러봐
 				  </button>
 				</h2>
 				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
